# deep-desk

./: .gitignore  CHANGELOG.md  app-store-metadata.md  build.bat  build.sh  package-lock.json  package.json  privacy.html  release.sh  support.html  version.json
.github/workflows/: build.yml
docs/: BUILD.md
docs/superpowers/plans/: 2026-05-26-tauri-migration.md
docs/superpowers/specs/: 2026-05-26-tauri-migration-design.md
server/src/: ccb.ts  mcp-defaults.json  runtime.ts  server.ts
src-tauri/: Cargo.toml  Deep_Desk_App_Store.provisionprofile  build.rs  entitlements.appstore.plist  entitlements.plist  tauri.conf.json  tauri.macos-aarch64-free.conf.json  tauri.macos-x64.conf.json  tauri.macos.conf.json  tauri.windows-x64-free.conf.json  tauri.windows-x86-free.conf.json  tauri.windows-x86.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  server.rs  storekit.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  i18n.ts  main.tsx  store.ts  utils.ts
web/src/components/: ChatView.tsx  ConversationTabs.tsx  InputBox.tsx  MessageBubble.tsx  PermissionCard.tsx  SettingsPanel.tsx
web/src/styles/: index.css
