[package]
name = "deep-desk"
version = "1.0.8"
description = "Deep Desk — AI coding assistant desktop app"
authors = []
edition = "2021"

[lib]
name = "deep_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "deep-desk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
open = "5"
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }


[profile.release]
strip = true
lto = true
codegen-units = 1
